2003-05-26  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/cfg.[ch], gw/bearerbox.c, doc/userguide/userguide.xml:
      added new command line option ("-g" or "--generate") to bearebox.
      This option just dump all known config
      groups and options to stdout. Later (if we have module API) we can
      dump default values also.

2003-05-24  Alexander Malysh  <a.malysh@centrium.de>
    * gwlib/octstr.[ch]: Made functions arguments const, then it's clear
      for caller whether we manipulate arguments.

2003-05-24  Bruno Rodrigues  <bruno.rodrigues@litux.org>
    * contrib/mon/kannel.monitor: applied fix from Dariusz Markowicz
      <00a301c321fa$08edab00$d4e34cd5@oem>

2003-05-19  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: fixed compiler warning

2003-05-16  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_http.c: fixed parse_xml_tag() function. This may be of 
      abstractive use inside gwlib/octstr.[ch]?!

2003-05-16  Stipe Tolj  <tolj@wapme-systems.de>
    * doc/userguide/userguide.xml: added 'xidris' to HTTP SMSC system-type
      values.
    * gw/smsc/smsc_http.c: added Xidris HTTP interface as system-type 
      'xidris'. Yet not tested against server.

2003-05-15  Stipe Tolj  <tolj@wapme-systems.de>
    * gwlib/md5.[ch]: added md5digest() function to return the raw 16 bytes
      of the hashed value.
    * gw/smsc/smsc_http.c: bruNET MT needs a 32 byte transaction id. Hence
      we use MD5 to generate an transaction id.
    * gw/smsc/smpp_pdu.c: removed assetion checking inside parsing function.
      bearerbox should not panic on malformed PDU packets.

2003-05-04  Bruno Rodrigues  <bruno.rodrigues@litux.org> 
    * debian/*.init: fix bug (Closes: #25)

2003-04-29  Stipe Tolj  <tolj@wapme-systems.de>
    * gw/smsc/smsc_emi2.c: login operation 60 had a hard timeout of 30 sec.
      Some SMSC may need longer to ACK the login, so use the 'wait-ack' time
      value here too in case it's larger then 30 sec.
